# fin

./: README.md  new_ticker.txt  pyproject.toml
src/fin/: __init__.py  crawl.py
src/fin/libs/: tickers.py
